--- a/src/app/dialogs/version/version.component.html
+++ b/src/app/dialogs/version/version.component.html
@@ -1,13 +1,17 @@
-<div class="rename-container">
-    <h2 mat-dialog-title class="dialog-title">Version</h2>
-    <div mat-dialog-content class="dialog-content">
-      <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Folder Name</mat-label>
-        <input matInput  />
-      </mat-form-field>
-    </div>
-    <div mat-dialog-actions class="dialog-actions">
-      <button mat-button-red class="btn btn-danger" (click)="onCancel()">Cancel</button>
-      <button mat-button-success  class="btn btn-success"  >Chnage Version</button>
-    </div>
-    </div>
+<div mat-dialog-title class="dialog-title">Version</div>
+<div mat-dialog-content class="dialog-content">
+  <p>Your current file version:</p>
+  <p>{{ data.version }}</p>
+  <mat-form-field appearance="fill" class="form-field">
+    <mat-label>Update Version:</mat-label>
+    <mat-select #selectedVersion (selectionChange)="onSave($event.value)">
+      <mat-option *ngFor="let version of versions" [value]="version.version">
+        {{ version.version }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+<div mat-dialog-actions class="dialog-actions">
+  <button mat-button class="btn btn-danger" (click)="onCancel()">Cancel</button>
+</div>
+
