--- a/src/app/folder-file-managment/file-explorer/file-explorer.component.html
+++ b/src/app/folder-file-managment/file-explorer/file-explorer.component.html
@@ -153,7 +153,7 @@
 
     <!--  files -->
     <div
-      *ngFor="let file of selectedFolder.files"
+      *ngFor="let file of getActive(selectedFolder.files)"
       class="file"
       [ngClass]="{ 'selected-item': isSelected(file, 'file') }"
       [attr.draggable]="true"
