--- a/src/app/folder-file-managment/file-preview/file-preview.component.css
+++ b/src/app/folder-file-managment/file-preview/file-preview.component.css
@@ -1,44 +1,6 @@
-
-h2[mat-dialog-title] {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 16px;
-  }
-  
-
-  mat-dialog-content {
-    padding: 16px;
-  }
-  
-
-  .image-preview {
-    max-width: 100%;
-    max-height: 500px;
-    object-fit: contain;
-    display: block;
-    margin: 0 auto;
-  }
-
-  .pdf-preview {
-    width: 100%;
-    height: 500px;
-    border: none;
-  }
-
-  .text-preview {
-    white-space: pre-wrap;
-    font-family: monospace;
-    white-space: pre-wrap;
-    max-height: 500px;
-    overflow-y: auto;
-  }
-
-  mat-dialog-actions {
-    display: flex;
-    justify-content: flex-end;
-    padding: 8px 16px;
-  }
-  
-
-
-  
+mat-dialog-actions button{
+  background-color: red;
+  border:none;
+  color:white;
+  border-radius: 5px;
+}
