--- a/src/app/folder-file-managment/file-explorer/file-explorer.component.html
+++ b/src/app/folder-file-managment/file-explorer/file-explorer.component.html
@@ -116,7 +116,7 @@
 </div> -->
 
 <div class="file-explorer">
-<div class="search">
+<div class="search" *ngIf="this.selectedFolder">
   <button  (click)="selectAll()" class="selectAll">
     <i class="fa-solid fa-border-all"></i> Select all
   </button>
