--- a/src/app/folder-file-managment/file-preview/file-preview.component.css
+++ b/src/app/folder-file-managment/file-preview/file-preview.component.css
@@ -1,6 +1,11 @@
-mat-dialog-actions button{
-  background-color: red;
+
+.cancel{
   border:none;
-  color:white;
-  border-radius: 5px;
+  background-color: white;
+}
+
+.fa-xmark{
+  color:red;   
+  font-size: 30px;
+  position: relative;
 }
