--- a/src/app/folder-file-managment/file-preview/file-preview.component.html
+++ b/src/app/folder-file-managment/file-preview/file-preview.component.html
@@ -21,6 +21,9 @@
 </mat-dialog-content> -->
 
 
+
+
+<button class="cancel" (click)="onClose()"><i class="fa-solid fa-xmark "></i></button>
 <h2 mat-dialog-title>File Preview</h2>
 
 <mat-dialog-content>
@@ -39,9 +42,8 @@
   </ng-container>
 </mat-dialog-content>
 
-<mat-dialog-actions>
-  <button mat-button (click)="onClose()">Close</button>
-</mat-dialog-actions>
+
+
 
 
 
