--- a/src/app/dialogs/create/create.component.css
+++ b/src/app/dialogs/create/create.component.css
@@ -13,16 +13,16 @@
 
 }
 
-
-input{
-    color:green
-}
 button{
     background-color: white;
 }
-.register-container .success {
+
+ /* .success {
     border:2px solid green;
-    padding:5px 15px;
+    background-color: rgb(102, 176, 102);
+    color:white;
+
+    padding:10px 20px;
    margin-right:10px;
    transition: all ease 0.3s;
    border-radius: 10px;
@@ -30,7 +30,7 @@ button{
 
 .success:hover{
     transform: scale(0.9);
-}
+} */
 
 
 .cancel{
@@ -46,3 +46,43 @@ button{
     top:10px
 
 }
+
+
+
+
+
+
+.success {
+  background:green;
+  border: 1px solid #03651d;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 20px;
+  text-align: center;
+  vertical-align: middle;
+  transition: all 0.2s ease-in-out;
+}
+
+.success:hover,
+.success:active {
+  background-color: white;
+  color: green;
+  box-shadow: rgba(138, 223, 158, 0.5) 0 1px 30px;
+}
+
+.success:active {
+transform: scale(0.9);
+  opacity: 0.5;
+}
+
+
