--- a/src/app/dialogs/delete/delete.component.html
+++ b/src/app/dialogs/delete/delete.component.html
@@ -1,11 +1,11 @@
 <div class="delete-container">
   <button class="cancel" (click)="onCancel()"><i class="fa-solid fa-xmark "></i></button>
     <div mat-dialog-content class="dialog-content">
-      <strong>Are you sure you want to delete?</strong>
+      <p><strong>Are you sure you want to delete?</strong></p>
     </div>
     <div mat-dialog-actions class="dialog-actions">
       <!-- <button mat-button-primary class="btn btn-primary" (click)="onCancel()">Cancel</button> -->
-      <button mat-button-red class="btn btn-danger" (click)="onDelete()">Delete</button>
+      <button class="btn btn-danger" (click)="onDelete()">Delete  <i class="fa-solid fa-trash"></i></button>
     </div>
   </div>
   
