--- a/src/app/dialogs/upload/upload.component.html
+++ b/src/app/dialogs/upload/upload.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 mat-dialog-title class="dialog-title">Upload File</h2>
 <mat-dialog-content class="dialog-content">
   <div class="upload-container">
@@ -14,6 +15,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions class="dialog-actions">
-  <button mat-button class="action-button cancel-button" (click)="onCancel()">Cancel</button>
-  <button mat-button class="action-button upload-button" (click)="onUpload()">Upload</button>
+  <button  class="action-button cancel-button" (click)="onCancel()">Cancel</button>
+  <button  class="action-button upload-button" (click)="onUpload()">Upload</button>
 </mat-dialog-actions>
+</div>
