--- a/src/app/dialogs/create/create.component.css
+++ b/src/app/dialogs/create/create.component.css
@@ -1,30 +1,43 @@
 .register-container {
-  /* background-color: white; */
+  background-color: white;
 }
-.register-container h1 {
+.dialog-title{
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
   text-align: center;
   color: green;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-.register-container mat-form-field {
+.dialog-content {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.form-field {
   width: 100%;
 }
 
-button {
-  background-color: white;
+.dialog-actions {
+  display: flex;
+  justify-content: end;
 }
 
 .cancel {
   border: none;
+  background-color: white;
+  position: absolute;
+  right:10px;
+  top:10px;
+  z-index: 10;
+
 }
 
 .fa-xmark {
   color: red;
   font-size: 30px;
-  position: relative;
-  left: 10px;
-  top: 10px;
 }
 
 .success {
