--- a/src/app/dialogs/rename/rename.component.css
+++ b/src/app/dialogs/rename/rename.component.css
@@ -65,10 +65,12 @@
   .cancel{
     border:none;
     background-color: white;
+    position: absolute; 
+     top: 10px;
+     right: 10px;
 }
 
 .fa-xmark{
     color:red;   
     font-size: 30px;
-    position: relative;
 }
