--- a/src/app/folder-file-managment/file-preview/file-preview.component.css
+++ b/src/app/folder-file-managment/file-preview/file-preview.component.css
@@ -1,14 +1,60 @@
-.container{
-  background-color: white;
+
+.container {
+  position: relative;
+  max-width: 90vw;
+  max-height: 90vh;
+  overflow: auto;
+  background: #fff;
+  border-radius: 8px;
+  padding: 16px;
 }
 
-.cancel{
-  border:none;
-  background-color: white;
+
+.cancel {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  z-index: 10;
 }
 
 .fa-xmark{
-  color:red;   
-  font-size: 30px;
-  position: relative;
+  color:red
+}
+
+
+h2 {
+  margin: 0;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+
+mat-dialog-content {
+  padding: 16px;
+  overflow: hidden;
+}
+
+.image-preview {
+  max-width: 100%;
+  max-height: 70vh;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+
+.pdf-preview {
+  width: 100%;
+  height: 700px;
+  border: none;
+}
+
+
+.text-preview {
+  width: 100%;
+  height: 500px;
 }
