--- a/src/app/folder-file-managment/file-tree/file-tree.component.css
+++ b/src/app/folder-file-managment/file-tree/file-tree.component.css
@@ -1,22 +1,19 @@
 
-
   .accordion-button {
     margin-bottom: 0; 
-    padding:0px;
-    padding-left:10px
+    padding:0px 10px;
+    font-size: 20px;
   }
   
-
   .fas {
-    font-size: 20px; 
+    font-size: 25px; 
+    margin-right:5px
   }
-
 
   .accordion-button {
     width: 100%; /*  button  fill its container */
     white-space: nowrap; 
     overflow: hidden; 
-    text-overflow: ellipsis; 
   }
 
   
@@ -29,4 +26,14 @@
    padding:4px;
  }
 }
+
   
+@media (max-width:590px) {
+  .accordion-item {
+      width:30vw;
+     
+}
+.accordion-body{
+ padding:0px;
+}
+}
